fix issue with overflowing area title on AOI

--- a/components/aoi-card/styles.scss
+++ b/components/aoi-card/styles.scss
@@ -175,6 +175,7 @@
       font-size: rem(14px);
       margin-bottom: 0;
       padding-bottom: rem(5px);
+      padding-right: rem(5px);
       line-height: 1.4;
     }
   }
